start switch to java 17 as minimal version, updated some dependencies